# aegis

./: .env.example  .gitignore  README.md  ais_io_prd_and_codex_prompts.md  pyproject.toml
.streamlit/: config.toml
app/: __init__.py  config.py  main.py
app/api/: chat.py  dashboard_data.py  playground.py  responses.py
app/canaries/: __init__.py  dp_source.py  generator.py  injector.py  registry.py
app/db/: database.py  models.py  repository.py
app/models/: base.py  mock_responses.py  ollama_model.py  openai_responses.py
app/nimbus/: __init__.py  ledger.py  scoring.py
app/proxy/: __init__.py  event_bus.py  policy.py  request_normalizer.py  responses_proxy.py
app/scanners/: __init__.py  base.py  canary_scanner.py  credential_shapes.py  responses_item_scanner.py  transforms.py
app/schemas/: __init__.py  api.py  events.py  responses.py  tool_calls.py
app/tools/: __init__.py  argument_flattener.py  fake_tools.py  tool_proxy.py
cift/: __init__.py  corpus.py  detector.py  evaluate.py  extraction.py  figures.py  live_logic.py  live_monitor.py  run.py
dashboard/: streamlit_app.py
docs/brainstorms/: 2026-06-25-cift-activation-probe-lab-requirements.md  2026-06-26-dphoney-pillar-and-demo-integration-requirements.md
docs/plans/: 2026-06-25-001-feat-cift-activation-probe-lab-plan.md  2026-06-26-001-feat-dphoney-pillar-demo-integration-plan.md
docs/solutions/best-practices/: activation-probe-experiment-validity.md
dphoney/: __init__.py  artifacts.py  calibration.py  corpus.py  distinguisher.py  figures.py  generator.py  live_logic.py  run.py
tests/: conftest.py  test_api_chat.py  test_api_responses.py  test_canary_generator.py  test_canary_injector.py  test_canary_scanner.py  test_cift_corpus.py  test_cift_detector.py  test_cift_evaluate.py  test_cift_extraction.py  test_cift_figures.py  test_cift_live_logic.py  test_dphoney_calibration.py  test_dphoney_corpus.py  test_dphoney_distinguisher.py  test_dphoney_generator.py  test_dphoney_injection.py  test_dphoney_live_logic.py  test_dphoney_run.py  test_nimbus_phase3.py  test_policy.py  test_responses_item_scanner.py  test_tool_scanner.py  test_transforms.py
