[project]
name = "ais"
version = "0.1.0"
description = "AIS local demo for detecting credential exfiltration in LLM agent outputs and tool calls."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "sqlalchemy>=2.0.30",
    "streamlit>=1.36.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]
# Opt-in heavy ML stack for the CIFT activation-probe lab. Not installed by the
# default `uv sync`; install with `uv sync --group cift`. Keeping torch out of
# the default path keeps the demo install and the base test suite light.
cift = [
    "torch>=2.2.0",
    "transformers>=5,<6",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
]
# Opt-in stats stack for the DP-HONEY honeytoken lab. No torch — DP-HONEY is
# pure numpy/scikit-learn — so it installs far lighter than `cift`. numpy comes
# in transitively via streamlit. Install with `uv sync --group dphoney`.
dphoney = [
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
